--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
   <div class="top-bar">
     <h1>
       <%= link_to root_path, accesskey: "0" do %>
+	  <span>Hello Capistrano!</span>
 	 <%= image_tag(image_path_for("logo_header.png"), alt: setting["org_name"]) %>
       <% end %>
     </h1>
